css/style.css
body {
	font-family: Verdana, Arial;
	font-size: 12px;
	color: #595441;
	background:#e3f3ff;
	text-align:center;
	margin-top:0px;
	padding-top:10px;
}
#wrap {
	max-width:950px;
	min-height:150px;
	margin:0 auto;
	background:white;
	text-align:left;
	padding:5px 20px 10px 20px;
	border-left:3px solid #2a85b3;
	border-right:3px solid #2a85b3;
	border-bottom:3px solid #2a85b3;
	border-top:3px solid #2a85b3;
	-moz-border-radius:20px;
	-webkit-border-radius:20px;
	border-radius:20px;
}
.hide-if-no-js {display: none;}
div, p, td {
	font-family: Verdana, Arial;
	font-size: 12px;
}
a, a:link, a:active, a:visited {
	color: #2a85b3;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
h1 {height:50px;margin:0;float:right;max-width:500px;}
h1 a {text-align:right;font-size:20px;float:right;}
h1 a, h1 a:link, h1 a:active, h1 a:visited {color:#2a85b3}
h1 a:hover{text-decoration:none;}
h1 a:hover span{text-decoration:underline;color:#88c0eb}

ul#admin_menu {
	min-height:100px;
	list-style-type:none;
	padding:0;
	font-size:105%;
}
ul#admin_menu li {
	color:#aaa;
	padding:1px 0;
}
ul#admin_menu li:hover {
	list-style-type:square;
	color:#000;
}

code {
	background:#eaeaef;
	padding:0 2px;
}
tt {
	background:#ffc;
	padding:0 2px;		
}

input, textarea {
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border-radius:3px;
}
Input.text, select, textarea {
	font-family: Verdana, Arial;
	font-size: 10px;
	color: #595441;
	background-color: #FFFFFF;
	border: 1px solid #88c0eb;
	margin:1px;
}
input.button {
	font-family: Verdana, Arial;
	font-size: 10px;
	color: #595441;
	font-weight: bold;
	background-color: #FFFFFF;
	border: 1px solid #88c0eb;
	cursor:pointer;
}
input.primary {
	border:2px solid #2A85B3;
	background:#fafafe;
}
input.text:focus, textarea:focus {
	border:2px solid #2A85B3;
	margin:0px;
}
tr.edit-row  td {
	background:#e3f3ff !important;
}
#new_url {
	text-align:center;
	padding:1px;
	border:1px solid #CDCDCD;
	background:#fff;
	clear:both;
}
#new_url div {
	background:#C7E7FF;
	padding:4px;
}
#new_url_form {
	padding:4px;
}
#new_url #feedback {
	background:#ff8;
	color:#88c0eb;
	width:50%;
	margin:0px 25%;
	padding:2px;
	border:1px solid #ff8;
}
#new_url #feedback .fail {
	color:#f55;
}
#add-url {width:400px}
td.url small a{
	color:#bbc;
}
body.desktop td.actions input,body.desktop  td.actions a {
	visibility:hidden;
}
td.actions input.disabled, td.actions input.loading {
	visibility:visible;
}
tr:hover td.actions input, tr:hover td.actions a {
	visibility:visible;
}
td.actions .button {
	font-family: Verdana, Arial;
	font-size: 10px;
	color: #595441;
	font-weight: bold;
	background-color: #FFFFFF;
	border: 1px solid #88c0eb;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border-radius:3px;
	cursor:pointer;
	height:22px;
	width:22px;
	margin-top:0px;
	margin-right:5px;
	display:block;
	float:left;
	text-indent:-9999px;
	outline:0px;
}
td.actions .button:active {
	border:1px solid #000;
}
td.actions .button:hover {
	text-decoration:none;
}
td.actions .button.disabled, #add-button.disabled {
	border:1px solid #333;
	background:#ccc;
}
td.actions .button.loading, #add-button.loading {
	background:#cc7 url(../images/loading.gif) center center no-repeat;
	color:#cc7;
}
td.actions .button_share {
	background:transparent url(../images/share.png) 2px center no-repeat;
}
td.actions .button_edit {
	background:transparent url(../images/pencil.png) 2px center no-repeat;
}
td.actions .button_delete {
	background:transparent url(../images/delete.png) 2px center no-repeat;
}
td.actions .button_stats {
	background:transparent url(../images/chart_bar.png) 2px center no-repeat;
}
#main_table tfoot th, #main_table tfoot th div {
	font-size:10px;
}
.error {
	color: red;
	background:#fee;
}
.warning {
	color: orange;
	background:#ffe9bf;
}
.success {
	color: green;
	background:#efe;
}
#login {
	width: 300px;
	margin: 200px auto 0px auto;
}
#login p{
	font-weight: bold;
}
#login .text {
	width: 100%;
}
#login ul {
	padding-left:0px;
	list-style-type:none;
	text-indent:0;
}
#login ul li {
	padding:0 0 5px 20px;
}
#login ul.error li {
	background:transparent url(../images/cancel.png) top left no-repeat;
}
#login ul.warning li {
	background:transparent url(../images/error.png) top left no-repeat;
}
#login ul.success li {
	background:transparent url(../images/accept.png) top left no-repeat;
}
.sub_wrap {
	max-width:580px;
	padding-bottom:30px;
	text-align:justify;
}
.sub_wrap span {
	background:#ffa;
	padding:0 2px;
}
a.bookmarklet {
	border:2px solid #2a85b3;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border-radius:3px;
	padding:5px 5px 5px 20px;
	background:#eef url(../images/favicon.gif) 2px center no-repeat;
	margin:3px;
	display:inline-block;
}
a.bookmarklet:hover {
	text-decoration:none;
	background-position:3px center;
}
#footer {
	text-align:center;
	margin-top:20px;
}
#footer p {
	padding:10px;
	background:white;
	margin:0 auto;
	max-width:950px;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	border:2px solid #2a85b3;
	-moz-border-radius-bottomleft:30px;
	-moz-border-radius-bottomright:30px;
	-webkit-border-bottom-left-radius:25px;
	-webkit-border-bottom-right-radius:25px;
	border-bottom-left-radius:25px;
	border-bottom-right-radius:25px;
}
#footer p a {
	background:#fff url(../images/favicon.gif) 2px center no-repeat;
	padding-left:20px;
}

.notice {
	border:1px solid #2a85b3;
	background: #F3FAFD;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px;
	width:70%;
	margin-left:15%;
	padding-left:10px;
	margin-bottom:5px;
}


.jquery-notify-bar {
  width:100%;
  position:fixed;
  top:0;
  left:0;
  z-index:32768;
  background-color:#efefef;
  font-size:18px;
  color:#000;
  text-align:center;
  font-family: Arial, Verdana, sans-serif;
  padding:20px 0px;
  border-bottom:1px solid #bbb;
  filter:alpha(opacity=95);
  -moz-opacity:0.95;
  -khtml-opacity:0.95;
  opacity:0.95;
  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.5);
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
  text-shadow: 0 1px 1px rgba(0,0,0,0.1);
}
.jquery-notify-bar.error ,.jquery-notify-bar.fail {
  color:#f00;
  background-color:#fdd;
}
.jquery-notify-bar.error span,.jquery-notify-bar.fail span{
	background:transparent url("../images/error.png") no-repeat left center;
	padding-left:20px;
}.jquery-notify-bar.success span{
	background:transparent url("../images/accept.png") no-repeat left center;
	padding-left:20px;
}
.jquery-notify-bar.success {
  color:#060;
  background-color:#aea;
}
.notify-bar-close {
  position:absolute;
  left:95%;
  font-size:11px;
}
tr.plugin.active a{ font-weight:bolder;}
body.desktop tr.plugin td.plugin_desc small{ visibility:hidden;}
tr:hover.plugin td.plugin_desc small{ visibility:visible;}

